# pgvecto.rs-py

./: README.md  pyproject.toml
.github/workflows/: python_check.yml  python_release.yml
examples/: django_example.py  psycopg_copy_example.py  psycopg_example.py  sdk_example.py  sqlalchemy_example.py
src/pgvecto_rs/: errors.py
src/pgvecto_rs/django/: __init__.py  bvector.py  extensions.py  functions.py  indexes.py  svector.py  vecf16.py  vector.py
src/pgvecto_rs/psycopg/: __init__.py  bvector.py  register.py  svector.py  vecf16.py  vector.py
src/pgvecto_rs/sdk/: client.py  record.py
src/pgvecto_rs/sqlalchemy/: __init__.py  bvector.py  svector.py  vecf16.py  vector.py
src/pgvecto_rs/types/: __init__.py  bvector.py  index.py  svector.py  vecf16.py  vector.py
tests/: __init__.py  test_django.py  test_psycopg.py  test_sdk.py  test_sqlalchemy.py  test_types.py
